#feature# draft accurate timer

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content padding>
+  <div>累计使用时间：  分钟 ：{{minutes}}   秒 ： {{seconds}}</div>
   <ion-item>
     <ion-label floating>
       <ion-icon name="timer" item-start class="text-primary"></ion-icon>
