#pending# add check screen lock for andorid using bg mode

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,8 @@
 </ion-header>
 
 <ion-content padding>
-  <div>你已经使用手机  年  天 月 日 时  {{minutes}} 分 {{seconds}} 秒 </div>
+  <div>你已经使用手机  年  天 月 {{days}} 日 {{hours}} 时  {{minutes}} 分 {{seconds}} 秒 </div>
+  <div> {{isAndroidOff}}</div>
   <ion-item>
     <ion-label floating>
         <ion-icon name="timer" item-start class="text-primary"></ion-icon>
