Add bg mode plugin( if not add this to package, bg mode works well, why?

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,6 +31,11 @@
         <ion-icon name="checkbox"></ion-icon>
         &nbsp;&nbsp;保存设置
       </button>
+
+      <button ion-button block round color="secondary" tappable (click)="disableBG()">
+        <ion-icon name="checkbox"></ion-icon>
+        &nbsp;&nbsp;关闭后台模式
+      </button>
     </div>
 
   </div>
