#tmp# add stop music function

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,10 +32,10 @@
         &nbsp;&nbsp;保存设置
       </button>
 
-      <button ion-button block round color="secondary" tappable (click)="disableBG()">
+      <!-- <button ion-button block round color="secondary" tappable (click)="disableBG()">
         <ion-icon name="checkbox"></ion-icon>
         &nbsp;&nbsp;关闭后台模式
-      </button>
+      </button> -->
     </div>
 
   </div>
